data/derived/comb/progs/unify/prog6034.ml.out
Characters 218-246:
  let (_,res) = (List.fold_left f base args) in res 
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type 'a * 'b
